--- a/.github/workflows/mdbook.yml
+++ b/.github/workflows/mdbook.yml
@@ -34,7 +34,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: Install mdBook
         run: |
-          curl -sSL https://github.com/rust-lang/mdBook/releases/download/v${MDBOOK_VERSION}/mdbook-v${MDBOOK_VERSION}-x86_64-unknown-linux-gnu.tar.gz | sudo tar -xz --directory=/usr/bin
+          curl -sSL https://github.com/rust-lang/mdBook/releases/download/v${MDBOOK_VERSION}/mdbook-v${MDBOOK_VERSION}-x86_64-unknown-linux-gnu.tar.gz | sudo tar -C /usr/bin -xz
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v4
