--- a/book.toml
+++ b/book.toml
@@ -4,3 +4,9 @@ language = "en"
 multilingual = false
 src = "src"
 title = "Title of Book"
+description = "Description in HTML meta block"
+
+[output.html]
+site-url = "/mdbook-test/"
+git-repository-url = "https://github.com/koitsu/mdbook-test/tree/master"
+edit-url-template = "https://github.com/koitsu/mdbook-test/edit/master/{path}"
