--- a/book.toml
+++ b/book.toml
@@ -10,3 +10,15 @@ description = "Description in HTML meta block"
 site-url = "/mdbook-test/"
 git-repository-url = "https://github.com/koitsu/mdbook-test/tree/master"
 edit-url-template = "https://github.com/koitsu/mdbook-test/edit/master/{path}"
+
+[output.html.search]
+enable = true
+limit-results = 30
+teaser-word-count = 30
+use-boolean-and = true
+boost-title = 2
+boost-hierarchy = 1
+boost-paragraph = 1
+expand = true
+heading-split-level = 3
+copy-js = true
