--- a/book.toml
+++ b/book.toml
@@ -3,13 +3,23 @@ authors = ["koitsu"]
 language = "en"
 multilingual = false
 src = "src"
-title = "Title of Book"
+title = "koitsu's THORSwap Notes"
 description = "Description in HTML meta block"
 
 [output.html]
 site-url = "/mdbook-test/"
 git-repository-url = "https://github.com/koitsu/mdbook-test/tree/master"
 edit-url-template = "https://github.com/koitsu/mdbook-test/edit/master/{path}"
+no-section-label = true
+default-theme = "light"
+preferred-dark-theme = "ayu"
+
+[output.html.fold]
+enable = true
+level = 1
+
+[output.html.print]
+enable = true
 
 [output.html.search]
 enable = true
