--- a/book.toml
+++ b/book.toml
@@ -12,7 +12,7 @@ git-repository-url = "https://github.com/koitsu/mdbook-test/tree/master"
 edit-url-template = "https://github.com/koitsu/mdbook-test/edit/master/{path}"
 no-section-label = true
 default-theme = "light"
-preferred-dark-theme = "navy"
+preferred-dark-theme = "ayu"
 
 [output.html.fold]
 enable = true
